--- a/Views/Note/Create.cshtml
+++ b/Views/Note/Create.cshtml
@@ -17,13 +17,13 @@
 			<div class="form-group mb-2">
 				<label asp-for="NoteTitle"></label>
 				<input asp-for="NoteTitle" class="form-control"/>
-				<span asp-validation-for="NoteTitle"></span>
+				<span asp-validation-for="NoteTitle" class="text-danger"></span>
 			</div>
 
 			<div class="form-group mb-2">
 				<label asp-for="NoteDescription"></label>
 				<input asp-for="NoteDescription" class="form-control" />
-				<span asp-validation-for="NoteDescription"></span>
+				<span asp-validation-for="NoteDescription" class="text-danger"></span>
 			</div>
 			<input type="submit" class="btn btn-primary" value="Create" />
 
