--- a/Views/Note/Detail.cshtml
+++ b/Views/Note/Detail.cshtml
@@ -13,17 +13,17 @@
                     <h5 class="card-title">@Model.NoteTitle</h5>
                 </div>
                 <div class="d-flex">
-                    <a asp-action="edit" asp-controller="note" asp-route-id="@Model.NoteId" class="btn btn-sm btn-primary me-2">Edit</a>
-                    <a asp-action="delete" asp-controller="note" asp-route-id="@Model.NoteId" class="btn btn-sm btn-primary me-2">Delete</a>
-                    <a asp-controller="note" asp-action="complete" asp-route-id="@Model.NoteId" class="btn btn-sm">
+                    <a asp-action="edit" asp-controller="note" asp-route-id="@Model.NoteId"><i class="fas fa-edit m-1" style="color: #5479bb;"></i></a>
+                    <a asp-action="delete" asp-controller="note" asp-route-id="@Model.NoteId" ><i class="fas fa-trash m-1" style="color: #c80404;"></i></a>
+                    <a asp-controller="note" asp-action="complete" asp-route-id="@Model.NoteId">
                         @if (Model.IsCompleted == true)
                         {
-                            <i class="fas fa-check fas-xl" style="color: #0ecd3e;"></i>
+                            <i class="fas fa-check fas-xl m-1" style="color: #0ecd3e;"></i>
 
                         }
                         else
                         {
-                            <i class="fas fa-check fas-xl" style="color: #afb0b1;"></i>
+                            <i class="fas fa-check fas-xl m-1" style="color: #afb0b1;"></i>
                         }
                     </a>
                 </div>
