--- a/Views/Note/Completed.cshtml
+++ b/Views/Note/Completed.cshtml
@@ -7,19 +7,19 @@
 
 
 
-	<div class="col-md-12 d-flex justify-content-between">
-		<div >
-			<h4>
-				My Notes
-			</h4>
-		</div>
-		<div>
+<div class="col-md-12 d-flex justify-content-between">
+	<div>
+		<h4>
+			My Notes
+		</h4>
+	</div>
+	<div>
 		<a asp-controller="Note" asp-action="Create"><i class="fas fa-plus fa-xl"></i></a>
 
-		
-		</div>	
+
 	</div>
-	<div class="d-flex justify-content-center col-md-12">
+</div>
+<div class="d-flex justify-content-center col-md-12">
 	<div class=" mt-3">
 		<nav aria-label="Page navigation example">
 			<ul class="pagination">
@@ -32,28 +32,28 @@
 			</ul>
 		</nav>
 	</div>
-	</div>
-	@if (Model.Count > 0)
-	{
-		<div class="row">
+</div>
+@if (Model.Count > 0)
+{
+	<div class="row">
 		@foreach (var note in Model)
 		{
 			<div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex align-items-stretch">
-			<div class="card m-4" style="width: 18rem;">
-				<div class="card-body">
-					<h5 class="card-title">@note.NoteTitle</h5>
-					<a asp-controller="Note" asp-action="Detail" asp-route-id="@note.NoteId">Details</a>
+				<div class="card m-4" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title">@note.NoteTitle</h5>
+						<a asp-controller="Note" asp-action="Detail" asp-route-id="@note.NoteId">Details</a>
+					</div>
 				</div>
 			</div>
-			</div>
 		}
-		</div>
-		
+	</div>
 
-	}
-	else
-	{
-		<h4>You have no notes yet. </h4>
-	}
+
+}
+else
+{
+	<h4>You have no notes marked as completed. </h4>
+}
 
 
